--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="set_hour_title">Preferowana godzina rozpoczęcia lunchu:</string>
+    <string name="set_duration_title">Preferowany czas trwania lunchu:</string>
+    <string name="set_place_title">Preferowane miejsce lunchu:</string>
+    <string name="set_place_radio_button_1">chcę wybrać konkretne miejsce</string>
+    <string name="set_place_radio_button_2">chcę wybrać typ restauracji</string>
+    <string name="set_place_radio_button_3">jestem otwarty na propozycje</string>
 </resources>
